--- a/image_classification/VOC.ipynb
+++ b/image_classification/VOC.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from VLAD import *\n",
@@ -16315,7 +16317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
